added models and game component

--- a/Frontend/competitive-connect-four/angular.json
+++ b/Frontend/competitive-connect-four/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "competitive-connect-four"
+  "defaultProject": "competitive-connect-four",
+  "cli": {
+    "analytics": "9b2c8509-aa9f-46ea-9725-983808171ed3"
+  }
 }
