--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -26,6 +26,10 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
         <!-- JUnit dependency -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
