--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -73,7 +73,22 @@
             <groupId>org.hibernate</groupId>
             <version>5.4.25.Final</version>
         </dependency>
-
+<!--        jackson dependencies-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.3</version>
+        </dependency>
         <!-- spring dependencies -->
         <!--<dependency>
             <groupId>org.springframework</groupId>
