--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -19,7 +19,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-framework-bom</artifactId>
-                <version>5.1.5.RELEASE</version>
+                <version>5.2.12.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -94,12 +94,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
-            <version>5.2.2.RELEASE</version>
+<!--            <version>5.1.5.RELEASE</version>-->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-messaging</artifactId>
-            <version>5.2.2.RELEASE</version>
+<!--            <version>5.1.5.RELEASE</version>-->
         </dependency>
     </dependencies>
 
