--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -55,6 +55,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- H2 database -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
 <!--		<dependency>-->
 <!--			<groupId>org.springframework</groupId>-->
