Changed default server port

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.servlet.contextPath=/CompetitiveConnect4
+server.port=6401
 
 management.security.enabled=false
 management.endpoints.web.exposure.include=*
