--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=cc4
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=cc4
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.platform=postgres
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driverClassName=org.postgresql.Driver
-
-spring.datasource.platform=postgres
-
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.servlet.contextPath=/CompetitiveConnect4
 server.port=6401
