--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -83,25 +83,25 @@
 <!--			<version>1.3.1</version>-->
 <!--		</dependency>-->
 
-<!--		&lt;!&ndash; Apache Commons IO &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>commons-io</groupId>-->
-<!--			<artifactId>commons-io</artifactId>-->
-<!--			<version>2.4</version>-->
-<!--		</dependency>-->
-<!--		&lt;!&ndash;tomcat &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.tomcat</groupId>-->
-<!--			<artifactId>tomcat-catalina</artifactId>-->
-<!--			<version>9.0.27</version>-->
-<!--		</dependency>-->
-<!--		&lt;!&ndash; JUnit dependency &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.junit.jupiter</groupId>-->
-<!--			<artifactId>junit-jupiter-engine</artifactId>-->
-<!--			<version>5.7.0-M1</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<!--tomcat -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>9.0.27</version>
+		</dependency>
+		<!-- JUnit dependency -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.7.0-M1</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- Postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
