--- a/Frontend/competitive-connect-four/package.json
+++ b/Frontend/competitive-connect-four/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
     "@types/socket.io-client": "^1.4.35",
+    "bootstrap": "^4.6.0",
     "ngx-cookie-service": "^11.0.2",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.0",
